# Brillouin-validation

./: .gitignore  README.md  pyproject.toml
example_data/zebrafish_eye_confocal.brim/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Analysis_0/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Analysis_0/Amplitude_AS_0/c/: 0
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Analysis_0/Amplitude_S_0/c/: 0
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Analysis_0/Offset_AS_0/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Analysis_0/Offset_AS_0/c/: 0
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Analysis_0/Shift_AS_0/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Frequency/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/PSD/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Data_0/Scanning/Spatial_map/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Metadata/Acquisition/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Metadata/Brillouin/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Metadata/Experiment/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Metadata/Optics/: zarr.json
example_data/zebrafish_eye_confocal.brim/Brillouin_data/Metadata/Spectrometer/: zarr.json
schemas/: brim_v0.1_schema.json
src/brim_validator/: validate_schema.py
(+73 files in other folders)
