[project]
name = "brim_validator"
version = "0.1.0"
description = "A package to validate Brillouin microscopy data."
dependencies = [
    "jsonschema",
    "zarr",
    "numpy",
]

[project.scripts]
brim-validate = "brim_validator.validate_schema:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
